--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,18 @@
     font-display: swap;
     font-family: 'Open Sans';
     font-style: normal;
+    font-weight: 400;
+    src: url('./assets/fonts/Open Sans/open-sans-v43-latin-ext-regular.woff2') format('woff2'),
+        url('./assets/fonts/Open Sans/open-sans-v43-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Open Sans';
+    font-style: normal;
     font-weight: 800;
-    src: url('./assets/fonts/Open Sans/open-sans-v43-latin-800.woff2') format('woff2');
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('./assets/fonts/Open Sans/open-sans-v43-latin-ext-800.woff2') format('woff2'),
+        url('./assets/fonts/Open Sans/open-sans-v43-latin-800.woff2') format('woff2');
 }
 
 @theme {
